ref : refactoring model code implementation with Omit, Pick.
