# src/app/api/v1/categories/controller.ts
@@ -1,20 +1,17 @@
 import { Request, Response } from "express";
-import prisma from "../../../prisma";
 import { CategoriesCreateRequest, CategoriesResponse } from "./model";
+import CategoriesService from "./service";
 
 class CategoriesController {
     createCategory = async (req: Request<{}, {}, CategoriesCreateRequest>, res: Response) => {
         try {
-            const category = await prisma.category.create({
-                data: {
-                    name: req.body.name,
-                    organizerId: req.body.organizerId
-                },
-                include: {
-                    organizer: true
-                }
-            });
-            res.status(201).json(CategoriesResponse.success('[SUCCESS] Category has been created', category));
+            const data = {
+                name: req.body.name,
+                organizerId: req.body.organizerId
+            }
+
+            const create = await CategoriesService.createCategory(data);
+            res.status(201).json(CategoriesResponse.success('[SUCCESS] Category has been created', create));
 
         } catch (e) {
             const errorMessage = e instanceof Error ? e.message : "[?] Unknown Error";
@@ -24,16 +21,9 @@ class CategoriesController {
 
     findByID = async (req: Request, res: Response) => {
         try {
-            const categoryId = req.params.id;
+            const categoryId = String(req.params.id);
 
-            const category = await prisma.category.findUniqueOrThrow({
-                where: {
-                    id: String(categoryId),
-                },
-                include: {
-                    organizer: true,
-                },
-            });
+            const category = await CategoriesService.getById(categoryId);
 
             return res.status(200).json(
                 CategoriesResponse.success(
@@ -57,16 +47,24 @@ class CategoriesController {
     updateCategory = async (req: Request, res: Response) => {
         try {
             const categoryId = req.params.id;
-            const update = await prisma.category.update({
-                where: {
-                    id: String(categoryId)
-                },
-                data: req.body
-            });
+            const data = req.body;
+            const update = await CategoriesService.updateCategory(String(categoryId), data)
             return res.status(201).json(CategoriesResponse.success("[SUCCESS] Update Successfully", update));
         } catch (error) {
-            const errMessage = error instanceof Error? error.message : 'Unknown';
+            const errMessage = error instanceof Error ? error.message : 'Unknown';
             res.status(404).json(CategoriesResponse.error("[FAILED] : Failed Update Data Category Id Not Found", errMessage));
+        }
+    };
+
+    deleteCategory = async (req: Request, res: Response) => {
+        try {
+            const categoryId = String(req.params.id)
+            const deleteCategory = await CategoriesService.deleteCategory(categoryId)
+
+            return res.status(200).json(CategoriesResponse.success("[SUCCESS] Delete Category Successful", deleteCategory))
+        } catch (error) {
+            const errMessage = error instanceof Error ? error.message : 'Unknown Error';
+            return res.status(404).json(CategoriesResponse.error("[FAILED] Failed Delete Category", errMessage));
         }
     }
 }
